--- a/step2/Dockerfile
+++ b/step2/Dockerfile
@@ -1,5 +1,8 @@
-FROM node:15
+FROM node:latest
 
 COPY src /opt/app
+
+WORKDIR /opt/app
+RUN npm install # Install dep. in package.json
 
 CMD ["node", "/opt/app/index.js"]
