--- a/step2/Dockerfile
+++ b/step2/Dockerfile
@@ -2,7 +2,7 @@ FROM node:latest
 
 COPY src /opt/app
 
-WORKDIR /opt/app
-RUN npm install # Install dep. in package.json
+WORKDIR /opt/app # Needed for the next command
+RUN npm install # Install dependencies in package.json
 
 CMD ["node", "/opt/app/index.js"]
